manifests/starling/starling.yaml
apiVersion: v1
kind: Service
metadata:
  name: starling
  namespace: starling
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: starling
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starling
  namespace: starling
spec:
  replicas: 2
  selector:
    matchLabels:
      app: starling
  template:
    metadata:
      labels:
        app: starling
    spec:
      imagePullSecrets:
        - name: docker-config
      containers:
      - name: web
        image: rg.fr-par.scw.cloud/averagemarcus-private/starling:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starling
  namespace: starling
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - starling.marcusnoble.co.uk
    secretName: starling-ingress
  rules:
  - host: starling.marcusnoble.co.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: starling
            port:
              number: 80
